--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nodemailer": "^0.7.1",
     "passport": "^0.2.1",
     "passport-facebook": "^2.0.0",
+    "qr-image": "^3.1.0",
     "serve-favicon": "~2.2.0",
     "twilio": "^1.11.1",
     "yelp": "^0.2.0"
