--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "domready": "^1.0.8",
     "ejs": "~2.3.1",
     "express": "~4.12.2",
+    "fs": "0.0.2",
     "morgan": "~1.5.1",
     "mysql": "^2.5.4",
     "nodemailer": "^0.7.1",
     "passport": "^0.2.1",
     "passport-facebook": "^2.0.0",
+    "python-shell": "0.0.3",
     "qr-image": "^3.1.0",
     "serve-favicon": "~2.2.0",
     "twilio": "^1.11.1",
